# LeggedVLA

./: .gitignore  .gitmodules  README.md  requirements_NavRL.txt
deploy_ros2/: README.md
deploy_ros2/src/map_manager/: CMakeLists.txt
deploy_ros2/src/map_manager/cfg/: map_param.yaml
deploy_ros2/src/map_manager/include/map_manager/: ESDFMap.cpp
deploy_ros2/src/map_manager/include/map_manager/clustering/: obstacleClustering.cpp
deploy_ros2/src/map_manager/launch/: occupancy_map.launch.py  rviz.launch.py
deploy_ros2/src/map_manager/rviz/: map.rviz
deploy_ros2/src/map_manager/src/: occupancy_map_node.cpp
deploy_ros2/src/navigation_runner/: CMakeLists.txt
deploy_ros2/src/navigation_runner/cfg/: dynamic_detector_param.yaml  map_param.yaml  navigation_param.yaml  safe_action_param.yaml  yolo_detector_param.yaml
deploy_ros2/src/navigation_runner/include/navigation_runner/: safeAction.cpp  safeAction.h  solver.h
deploy_ros2/src/navigation_runner/launch/: navigation.launch.py  run_integrated.launch.py  rviz.launch.py
deploy_ros2/src/navigation_runner/rviz/: navigation.rviz
deploy_ros2/src/navigation_runner/scripts/: navigation_navrl.py  navigation_node.py  pid_controller.py
deploy_ros2/src/navigation_runner/scripts/cfg/: ppo.yaml  sim.yaml  train.yaml
deploy_ros2/src/navigation_runner/scripts/navrl/: ppo.py
deploy_ros2/src/navigation_runner/srv/: GetSafeAction.srv
deploy_ros2/src/navrl/map_manager/: package.xml
deploy_ros2/src/navrl/map_manager/cfg/: map_param.yaml
deploy_ros2/src/navrl/map_manager/launch/: esdf_map.launch.py
deploy_ros2/src/navrl/navigation_runner/: package.xml
deploy_ros2/src/navrl/onboard_detector/: CMakeLists.txt
deploy_ros2/src/navrl/onboard_detector/cfg/: yolo_detector_param.yaml
deploy_ros2/src/navrl/onboard_detector/include/onboard_detector/: dynamicDetector.h  utils.h
deploy_ros2/src/navrl/onboard_detector/include/onboard_detector/detectors/: dbscan.cpp  uvDetector.h
deploy_ros2/src/navrl/onboard_detector/include/onboard_detector/tracking/: kalmanFilter.h
deploy_ros2/src/navrl/onboard_detector/rviz/: detector.rviz
deploy_ros2/src/navrl/onboard_detector/scripts/: yolo_detector.py  yolo_detector_node.py
deploy_ros2/src/onboard_detector/: package.xml
deploy_ros2/src/onboard_detector/cfg/: dynamic_detector_param.yaml
deploy_ros2/src/onboard_detector/launch/: dynamic_detector.launch.py  rviz.launch.py
deploy_ros2/src/onboard_detector/src/: dynamic_detector_node.cpp
env_isaacgym/: README.md  requirements_isaacgym.txt
env_isaacgym/legged_gym/envs/a1/: a1_amp_config.py
env_isaacgym/legged_gym/envs/aliengo/: aliengo_amp_config.py
env_isaacgym/legged_gym/envs/base/: legged_robot_config.py  observation_buffer.py
env_isaacgym/legged_gym/scripts/: play.py
env_isaacgym/legged_gym/utils/: helpers.py  task_registry.py
env_isaaclab/: README.md  requirements_isaaclab4.1.txt  requirements_isaaclab4.2.txt
env_isaaclab/isaac_ros2/: README.md  isaac_go2_ros2.py  isaac_ros2.py
env_isaaclab/isaac_ros2/agent/: agent_ctrl.py  agent_policy.py  agent_sensors.py  ctrl_cfg.py  scene_a1.py  scene_go2.py
env_isaaclab/isaac_ros2/cfg/: sim.yaml
env_isaaclab/isaac_ros2/env/: matterport3d_env.py  sim_env.py  terrain.py  terrain_cfg.py
env_isaaclab/isaac_ros2/go2/: go2_ctrl.py  go2_ctrl_cfg.py  go2_env.py  go2_sensors.py
env_isaaclab/isaac_ros2/policy/: wmp_deployment_runner.py  wmp_policy.py
env_isaaclab/isaac_ros2/ros2/: agent_ros2_bridge.py  go2_ros2_bridge.py
env_isaaclab/isaac_ros2/rviz/: go2.rviz
env_isaaclab/isaac_ros2/wmp/: wmp_deployment_runner.py  wmp_policy.py
env_isaaclab/isaac_ros2/wmp/train_config/: aliengo_amp_config.py
env_isaaclab/isaac_vlnce/scripts/: demo_planner.py
traiining_loco/NaVILA_loco/: README.md
traiining_loco/NaVILA_loco/scripts/: demo_matterport.py  play.py  run_data_collection.py  train.py
traiining_loco/WMP/: requirements.txt
traiining_loco/WMP/dreamer/: models.py  networks.py  tools.py
traiining_loco/WMP/legged_gym/envs/: __init__.py
traiining_loco/WMP/legged_gym/utils/: __init__.py  terrain.py
traiining_loco/WMP/rsl_rl/algorithms/: amp_discriminator.py  amp_ppo.py  ppo.py
traiining_loco/WMP/rsl_rl/datasets/: motion_loader.py
traiining_loco/WMP/rsl_rl/modules/: actor_critic.py  actor_critic_recurrent.py  actor_critic_wmp.py  depth_predictor.py
traiining_loco/WMP/rsl_rl/runners/: __init__.py  on_policy_runner.py  wmp_runner.py
traiining_loco/WMP/rsl_rl/storage/: rollout_storage.py
traiining_loco/WMP/rsl_rl_wmp/algorithms/: amp_discriminator.py  amp_ppo.py  ppo.py
traiining_loco/WMP/rsl_rl_wmp/modules/: actor_critic_recurrent.py
training_loco/NaVILA_loco/: LICENSE
training_loco/NaVILA_loco/scripts/: play_low_matterport_keyboard.py  utils.py
training_loco/WMP/: README.md
training_loco/WMP/datasets/mocap_motions/: hop1.txt  hop2.txt  trot1.txt  trot2.txt
training_loco/WMP/deploy/depth_lcm/: camera_msgs_pub.py  camera_msgs_sub.py
training_loco/WMP/deploy/envs/: lcm_agent.py
training_loco/WMP/deploy/scripts/: agent_config_aliengo.json  agent_config_go1.json  deploy_policy_wmp.py
training_loco/WMP/deploy/tests/: check_camera_msgs.py
training_loco/WMP/deploy/utils/: cheetah_state_estimator.py  deployment_runner.py
training_loco/WMP/dreamer/: __init__.py  configs.yaml
training_loco/WMP/legged_gym/envs/: __init__.py
training_loco/WMP/legged_gym/scripts/: play.py  train.py
training_loco/WMP/legged_gym/utils/: task_registry.py  terrain.py  trimesh.py
training_loco/WMP/rsl_rl_wmp/datasets/: motion_loader.py  motion_util.py
training_loco/WMP/rsl_rl_wmp/modules/: __init__.py
training_loco/WMP/rsl_rl_wmp/runners/: on_policy_runner.py  wmp_runner.py
training_loco/WMP/rsl_rl_wmp/storage/: rollout_storage.py
training_loco/WMP/wmp/: play.py  wmp_deployment_runner.py  wmp_policy.py
training_loco/WMP/wmp/train_config/: aliengo_amp_config.py
training_vla/NavRL/: README.md  setup.sh
training_vla/NavRL/training/cfg/: drone.yaml  ppo.yaml  train.yaml
training_vla/NavRL/training/scripts/: env.py  eval.py  ppo.py  train.py  utils.py
(+34 files in other folders)
